# task-manager

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
config/: config.yaml
src/: main.rs
src/configuration/: config_yaml.rs  mod.rs  model.rs
src/database/: cache.rs  postgres.rs
src/handler/: task_manager.rs
src/middleware/: logger.rs
src/model/: mod.rs  request.rs  response.rs  schema.rs  task_manager.rs
src/repository/: interface.rs  task_manager.rs
src/router/: task_manager.rs
src/service/: interface.rs  mod.rs  task_manager.rs
src/util/: token.rs
