[package]
name = "task-manager"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-service = "2.0.2"
actix-web = "4.4.0"
awc = "3.2.0"
chrono = "0.4.31"
diesel = { version = "2.1.2", features = ["postgres"] }
env_logger = "0.10.0"
futures-util = "0.3.28"
jsonwebtoken = "8.3.0"
log = "0.4.20"
redis = "0.23.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_yaml = "0.9.25"
tracing-subscriber = { version = "0.3.17", features = ["json"] }
uuid = {version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"]}

[build]
rustc-flags = ["-l", "rustc-link-lib"]